--- a/recipes/Maple_Bacon_Waffles.html
+++ b/recipes/Maple_Bacon_Waffles.html
@@ -12,9 +12,11 @@
 	</div>
 	
 	<!-- Description -->
-	<h2>This is a description of this delicious recipe</h2>
+	<h2>Scrumptious Waffles Topped with Canadian Bacon and Maple Syrup</h2>
 	<p>
-		This is a brief paragraph of what intices someone to make this recipe!
+		Do you like warm and fluffy waffles? Now imagine how much better they would
+		be with the sweet and salty flavours of Canadian bacon and maple syrup! That's
+		right, these are THAT good!
 	</p>
 	
 	<!-- Ingredients -->
@@ -22,11 +24,9 @@
 	
 	<!-- Unordered list of Ingredients -->
 	<ul>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
+		<li>Waffle Batter</li>
+		<li>Maple Syrup</li>
+		<li>Canadian Bacon</li>
 	</ul>
 	
 	<!-- Directions -->
@@ -34,21 +34,27 @@
 	
 	<!-- Ordered list of Directions -->
 	<ol>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
-	</ol>	
+		<li>Cook the Canadian bacon in a pan until nice and crispy.</li>
+		<li>When bacon is done cooking, add 1 Cup of waffle batter to a waffle maker.</li>
+		<li>Wait until the waffles are cooked (they should be fluffy and throughouly cooked).</li>
+		<li>Repeat the process until desired amount of waffles are made.</li>
+		<li>Stack waffles on top of eachother and add bacon to the very top.</li>
+		<li>Smother the waffles and bacon in maple syrup.</li>
+		<li>Enjoy, eh!</li>
+	</ol>
+
+	<!-- Adding button for user to return back to the top of the page -->
+	</div>
+		<a href="#top" title="Return to top">Return to top</a>
+	<div>	
+	
+	<!-- Adding a break in the page to separate the buttons -->
+	<br>
 	
 	<!-- Adding button for user to return back to the main page -->
 	</div>
 		<a href="../index.html" title="Return to main page">Return to main page</a>
 	<div>
 	
-	<!-- Adding button for user to return back to the top of the page -->
-	</div>
-		<a href="#top" title="Return to top">Return to top</a>
-	<div>
   </body>
 </html>
