--- a/recipes/Nanaimo_Bars.html
+++ b/recipes/Nanaimo_Bars.html
@@ -6,15 +6,16 @@
   </head>
 
   <body>
-    <h1>Nanaimo Bars<li><a href="./recipes/Maple_Bacon_Waffles.html">Maple Bacon Waffles</a></li></h1>
+    <h1>Nanaimo Bars</h1>
 	<div>
 		<img src="../images/Nanaimo_Bars.jpg" alt="Delicious Nanaimo Bars" height="300" width="300">
 	</div>
 	
 	<!-- Description -->
-	<h2>This is a description of this delicious recipe</h2>
+	<h2>Mouth Watering Nanaimo Bars</h2>
 	<p>
-		This is a brief paragraph of what intices someone to make this recipe!
+		The perfect dessert divided into 3 layers of coconut crumb base, custard filling, 
+		and a chocolate ganache topping that will drive your tastebuds crazy!
 	</p>
 	
 	<!-- Ingredients -->
@@ -22,11 +23,18 @@
 	
 	<!-- Unordered list of Ingredients -->
 	<ul>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
+		<li>1 cup butter, softened, divided</li>
+		<li>5 tablespoons unsweetened cocoa powder</li>
+		<li>¼ cup white sugar</li>
+		<li>1 egg, beaten</li>
+		<li>1 ¾ cups graham cracker crumbs</li>
+		<li>1 cup flaked coconut</li>
+		<li>½ cup finely chopped almonds (Optional)</li>
+		<li>3 tablespoons heavy cream</li>
+		<li>2 tablespoons custard powder</li>
+		<li>2 cups confectioners' sugar</li>
+		<li>4 (1 ounce) squares semisweet baking chocolate</li>
+		<li>2 teaspoons butter</li>
 	</ul>
 	
 	<!-- Directions -->
@@ -34,21 +42,33 @@
 	
 	<!-- Ordered list of Directions -->
 	<ol>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
+		<li>In the top of a double boiler, combine 1/2 cup softened butter, cocoa powder, 
+		and sugar. Stir occasionally until melted and smooth. Beat in egg and stir until 
+		thick, 2 to 3 minutes.</li>
+		<li>Remove from the heat and mix in graham cracker crumbs, coconut, and almonds. 
+		Press into the bottom of an ungreased 8x8-inch pan.</li>
+		<li>For the middle layer, beat remaining 1/2 cup softened butter, heavy cream, 
+		and custard powder until light and fluffy. Mix in confectioners' sugar until 
+		smooth. Spread over the bottom layer in the pan. Chill to set.</li>
+		<li>While the second layer is chilling, melt semisweet chocolate and 2 teaspoons 
+		butter together in the microwave or over low heat.</li>
+		<li>Spread melted chocolate mixture over chilled bars. Let the chocolate set before 
+		cutting into squares.</li>
+		<li>Enjoy!</li>
 	</ol>
+
+	<!-- Adding button for user to return back to the top of the page -->
+	</div>
+		<a href="#top" title="Return to top">Return to top</a>
+	<div>	
+	
+	<!-- Adding a break in the page to separate the buttons -->
+	<br>
 	
 	<!-- Adding button for user to return back to the main page -->
 	</div>
 		<a href="../index.html" title="Return to main page">Return to main page</a>
 	<div>
 	
-	<!-- Adding button for user to return back to the top of the page -->
-	</div>
-		<a href="#top" title="Return to top">Return to top</a>
-	<div>
   </body>
 </html>
