--- a/recipes/Poutine.html
+++ b/recipes/Poutine.html
@@ -12,9 +12,10 @@
 	</div>
 	
 	<!-- Description -->
-	<h2>This is a description of this delicious recipe</h2>
+	<h2>Savoury Potato Fries Topped with Cheese Curds and Gravy. I present ... the Poutine!</h2>
 	<p>
-		This is a brief paragraph of what intices someone to make this recipe!
+		This Canadian staple will have you putting on your winter flannel and lace up your skates. It
+		brings out the most inner Canadian in you to life with all it's glory!
 	</p>
 	
 	<!-- Ingredients -->
@@ -22,11 +23,9 @@
 	
 	<!-- Unordered list of Ingredients -->
 	<ul>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
+		<li>Potato Fries (straight, crinkle, curly, waffle ... whatever you prefer!</li>
+		<li>Cheese Curds</li>
+		<li>Gravy</li>
 	</ul>
 	
 	<!-- Directions -->
@@ -34,21 +33,27 @@
 	
 	<!-- Ordered list of Directions -->
 	<ol>
-		<li>1</li>
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
-		<li>5</li>
+		<li>Fill the air fryer with the fries until the whole base is covered.</li>
+		<li>Cook fries until golden brown.</li>
+		<li>While fries are cooking, make the gravy.</li>
+		<li>Add the fries to a dish.</li>
+		<li>Sprinkle the fries with the cheese curds.</li>
+		<li>Pour the gravy on top of the cheese and fries.</li>
+		<li>Enjoy, ya hoser!</li>
 	</ol>
+
+	<!-- Adding button for user to return back to the top of the page -->
+	</div>
+		<a href="#top" title="Return to top">Return to top</a>
+	<div>	
+	
+	<!-- Adding a break in the page to separate the buttons -->
+	<br>
 	
 	<!-- Adding button for user to return back to the main page -->
 	</div>
 		<a href="../index.html" title="Return to main page">Return to main page</a>
 	<div>
 	
-	<!-- Adding button for user to return back to the top of the page -->
-	</div>
-		<a href="#top" title="Return to top">Return to top</a>
-	<div>
   </body>
 </html>
