--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<h1>Ashton's Favourite Canadian Recipes!</h1>
-		<!-- <img src="./images/Canadian_Flag.gif" alt="Waving Canadian Flag Gif" height="300" width="530"> -->
+		<img src="./images/Canadian_Flag.gif" alt="Waving Canadian Flag Gif" height="300" width="530">
 		
 		<h2>A collection of recipes from Ashton's favourites!</h2>
 		<ul>
